# meilisearch-rfcs

./: Cargo.toml  GRAPHQL_IMPLEMENTATION.md  IMPLEMENTATION.md  SPLADE_IMPLEMENTATION_README.md
crates/index-scheduler/: Cargo.toml
crates/meilisearch/: Cargo.toml
crates/meilisearch-analytics/: Cargo.toml  README.md
crates/meilisearch-analytics/src/: ab_testing.rs  ctr_tracker.rs  lib.rs  query_logger.rs  relevancy_learner.rs
crates/meilisearch-coordinator/: Cargo.toml  README.md
crates/meilisearch-coordinator/src/: cluster.rs  coordinator.rs  error.rs  lib.rs  shard_allocator.rs  types.rs
crates/meilisearch-gateway/: Cargo.toml  README.md
crates/meilisearch-gateway/src/: api.rs  config.rs  error.rs  gateway.rs  health.rs  indexer.rs  lib.rs  merger.rs  pool.rs  replication.rs  router.rs  types.rs
crates/meilisearch-graphql/: Cargo.toml  README.md  schema.graphql
crates/meilisearch-graphql/src/: error.rs  lib.rs  mutation.rs  query.rs  schema.rs  subscription.rs  tests.rs  types.rs
crates/meilisearch-quota/: Cargo.toml
crates/meilisearch-quota/src/: billing.rs  lib.rs  priority_queue.rs  rate_limiter.rs  tenant_quotas.rs  usage_tracker.rs
crates/meilisearch-quota/tests/: integration_test.rs
crates/meilisearch-types/src/error/: enhanced.rs  mod.rs
crates/meilisearch-types/src/settings/: validator.rs
crates/meilisearch/src/: lib.rs  main.rs
crates/meilisearch/src/routes/: analytics_routes.rs  graphql.rs  mod.rs
crates/meilisearch/src/routes/indexes/: explain.rs  query_builder.rs
crates/meilitool/src/: debug.rs
crates/milli/: Cargo.toml
crates/milli/src/search/: hybrid.rs  mod.rs
crates/milli/src/search/fusion/: adaptive.rs  learning.rs  mod.rs  rrf.rs
crates/milli/src/update/: batch_optimizer.rs  mod.rs
crates/milli/src/update/facet/: incremental_bulk.rs  mod.rs
crates/milli/src/update/index_documents/helpers/: grenad_helpers.rs
crates/milli/src/update/streaming/: README.md  merge.rs  mod.rs  recovery.rs  tests.rs  wal.rs  write_buffer.rs
crates/milli/src/vector/: distance.rs  mod.rs  multi_vector.rs  search_config.rs  splade.rs  splade_training.rs
crates/milli/src/vector/embedder/: gpu_accelerator.rs  mod.rs  splade.rs
crates/milli/src/vector/index/: ivf_hnsw.rs  mod.rs
crates/milli/src/vector/quantization/: mod.rs  pq.rs  sq.rs
rfcs/: 001_enhanced_hybrid_search_fusion.md  002_distributed_architecture.md  003_advanced_vector_search.md  004_streaming_indexing_real_time.md  005_graphql_api_flexible_queries.md  006_search_analytics_relevancy_intelligence.md  007_IMPLEMENTATION_GUIDE.md  007_parallel_indexing_optimization.md  007_parallel_indexing_optimization_example.rs  008_enhanced_error_messages_dev_tooling.md  009_multi_vector_documents_advanced_rag.md  010_resource_quotas_quality_of_service.md  011_learned_sparse_representations_splade.md  IMPLEMENTATION_008.md  README.md  SPLADE_IMPLEMENTATION_GUIDE.md
