[package]
name = "meilisearch-analytics"
publish = false

version.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
readme.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.98"
heed = { version = "0.22.1-nested-rtxns-6", default-features = false, features = [
    "serde-json",
    "serde-bincode",
] }
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["serde-well-known", "formatting"] }
tokio = { version = "1.45", features = ["full"] }
tracing = "0.1.41"
uuid = { version = "1.17.0", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.20.0"
