[package]
name = "meilisearch-coordinator"
version.workspace = true
authors.workspace = true
description = "Cluster coordinator for distributed Meilisearch using Raft consensus"
homepage.workspace = true
readme = "README.md"
edition.workspace = true
license.workspace = true

[dependencies]
# Raft consensus
raft = "0.7.0"
slog = "2.7.0"
slog-stdlog = "4.1.1"
protobuf = "3.3.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Networking
tonic = "0.11"
prost = "0.12"

# Utilities
thiserror = "2.0"
tracing = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Collections
dashmap = "6.1"

# Time
time = { version = "0.3.36", features = ["serde", "formatting", "parsing", "macros"] }

[build-dependencies]
tonic-build = "0.11"
