[package]
name = "meilisearch-gateway"
version.workspace = true
authors.workspace = true
description = "Gateway for distributed Meilisearch query routing and result merging"
homepage.workspace = true
readme = "README.md"
edition.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies
meilisearch-coordinator = { path = "../meilisearch-coordinator" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Networking
reqwest = { version = "0.12", features = ["json"] }

# Utilities
thiserror = "2.0"
tracing = "0.1"

# Collections
dashmap = "6.1"

# Time
time = { version = "0.3.36", features = ["serde", "formatting", "parsing", "macros"] }

# Configuration
toml = "0.8"
uuid = { version = "1.6", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
